<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Android学习</string>
    <string name="hello">Hello android-study!</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="telNumber">电话号码</string>
    <string name="content">内容</string>
    <string name="send">发送</string>
    <string name="call">Call</string>
    <string name="save">保存</string>
    <string name="read">读取</string>
    <string name="Shared">sharedPer</string>
    <string name="sd">SD</string>
    <string name="backup">备份</string>
    <string name="change">切换</string>
    <string name="myImage">自己写得</string>
    <string name="action_search">查询</string>
    <string name="action_call">打电话</string>

</resources>