<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/et_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/content" >
    </EditText>

    <Button
        android:id="@+id/btn_save"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/et_content"
        android:onClick="saveInfo"
        android:text="@string/save" />

    <Button
        android:id="@+id/read"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/btn_save"
        android:layout_toRightOf="@id/btn_save"
        android:onClick="readInfo"
        android:text="@string/read" />

    <TextView
        android:id="@+id/tv_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_save" />

    <RadioGroup
        android:id="@+id/rg_saveType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/tv_content"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/rb_shared"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/Shared" />

        <RadioButton
            android:id="@+id/rb_sd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sd" />

    </RadioGroup>

</RelativeLayout>